--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,7 +20,7 @@
 			<div class="col-md-6" id="firstSection">
 				<form class="border p-4 mb-" id="form">
 					<div class="form-group">
-						<label>Task</label>
+						<label>Chepito bonito</label>
 						<input type="text" class="form-control" id="task" placeholder="Enter task">
 					</div>
 					<div class="form-grup">
